--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,3 +13,8 @@ jobs:
         uses: actions/checkout@v5
       - name: Probar codigo
         run: python3 main.py
+
+      - name: Crear imagen Docker
+        run: docker build -t ander/holamundo .
+      - name: Probar contenedor Docker
+        run: docker run ander/holamundo
